# spacex_smartweets

./: .gitignore  log.txt  pyproject.toml  readme.md  seen_tweets.txt  tweetsearch.py  twitter_test.ipynb
.ipynb_checkpoints/: twitter_test-checkpoint.ipynb
