[tool.poetry]
name = "spacex_smartweets"
version = "1.0.0"
description = "A simple tweet processor for automatically and intelligently sorting tweets related to SpaceX"
authors = ["Cody Kingham <codykingham@icloud.com>", "Carl Fürstenberg <azatoth@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-twitter = "^3.5"
pytz = "^2022.1"
nltk = "^3.7"
diskcache = "^5.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third-party"
import_heading_firstparty = "First-party"
import_heading_localfoler = "Local folder"
force_sort_within_sections = true
